fix: revert Slider overflow fix in Section

--- a/src/blocks/blocks/section/editor.scss
+++ b/src/blocks/blocks/section/editor.scss
@@ -85,7 +85,6 @@ html[lang="ja"], html[lang="ko"], html[lang="zh"], html[lang="zh-Hans"], html[la
 
 		background: var( --background );
 		transition: 0.3s;
-		word-wrap: anywhere;
 
 		&:hover {
 			background: var( --background-color-hover );
@@ -93,10 +92,6 @@ html[lang="ja"], html[lang="ko"], html[lang="zh"], html[lang="zh-Hans"], html[la
 
 		> * {
 			position: relative;
-		}
-
-		* {
-			word-wrap: anywhere;
 		}
 
 		a:not( .wp-block-button__link ):not( .social-icon ) {
@@ -113,10 +108,6 @@ html[lang="ja"], html[lang="ko"], html[lang="zh"], html[lang="zh-Hans"], html[la
 
 		.wp-block-themeisle-blocks-slider {
 			display: block;
-
-			> div {
-				max-width: 100%;
-			}
 		}
 
 		.aligncenter {
